--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <main>
         <section id="about">
             <div class="internal" id="about-section">
-                <h5>About Me</h5>
-                <p>I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our data.</p>
+                <h5 class="mini-title">About Me</h5>
+                <p class="mini-text">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional results while working with me. Delivering work within time and budget which meets clients requirements in our data.</p>
                 <ul>
                     <li>Name:<span>Mary Hardy</span></li>
                     <li>Email:<span>info@gmail.com</span></li>
@@ -61,6 +61,47 @@
                 </ul>
             </div>         
         </section>
+
+        <section id="what-i-do">
+            <div class="internal">
+                <h5 class="mini-title">What I do</h5>
+                <p class="mini-text">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+            </div>
+            <section>
+                <article class="skill-set">
+                    <figure>
+                        <img src="images/icons/js.png">
+                        <figcaption>Vanilla JavaScript</figcaption>
+                    </figure>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </article>
+                
+                <article class="skill-set">
+                    <figure>
+                        <img src="images/icons/react.png">
+                        <figcaption>React</figcaption>
+                    </figure>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </article>
+
+                <article class="skill-set">
+                    <figure>
+                        <img src="images/icons/nodejs.png">
+                        <figcaption>Node.js</figcaption>
+                    </figure>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </article>
+
+                <article class="skill-set">
+                    <figure>
+                        <img src="images/icons/mongo.png">
+                        <figcaption>MongoDB</figcaption>
+                    </figure>
+                    <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </article>
+            </section>
+        </section>
+
     </main>
 
     <footer></footer>
