Done upto Resume

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h1>Mary Hardy</h1>
                         <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                         <div class="two-btns">
-                            <button class="btn" id="download-cv-btn"><a href="#"><i class="fa-solid fa-download"></i> Download CV</a></button>
+                            <button class="btn download-cv-btn"><a href="#"><i class="fa-solid fa-download"></i> Download CV</a></button>
                             <button class="btn" id="contact-btn"><a href="#"><i class="fa-solid fa-phone"></i> Contact</a></button>
                         </div>
                     </div>
@@ -100,6 +100,75 @@
                     <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
                 </article>
             </section>
+        </section>
+
+        <section id="summary">
+            <div class="internal">
+                <h5 class="mini-title">A summary of My Resume</h5>
+            </div>
+            <section id="resume">
+                <ul>
+                    <li>
+                        <h3>My Education</h3>
+
+                        <article>
+                            <h2>Master in Computer Engineering</h2>
+                            <h4>Harvard University / 2015 - 2017</h4>
+                            <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </article>
+
+                        <div class="straight-line"></div>
+
+                        <article>
+                            <h2>Master in Computer Engineering</h2>
+                            <h4>Harvard University / 2015 - 2017</h4>
+                            <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </article>
+
+                        <div class="straight-line"></div>
+
+                        <article>
+                            <h2>Master in Computer Engineering</h2>
+                            <h4>Harvard University / 2015 - 2017</h4>
+                            <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </article>
+                    </li>
+                    <li>
+                        <h3>My Experience</h3>
+
+                        <article>
+                            <h2>Sr. Font End Developer</h2>
+                            <h4>Apple Inc / 2020 - Current</h4>
+                            <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </article>
+
+                        <div class="straight-line"></div>
+
+                        <article>
+                            <h2>Jr. Font End Developer</h2>
+                            <h4>Dribbble Inc / 2018 - 2022</h4>
+                            <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </article>
+                        
+                        <div class="straight-line"></div>
+
+                        <article>
+                            <h2>HTML Developer</h2>
+                            <h4>Adobe Inc / 2017 - 2018</h4>
+                            <p>List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        </article>
+                    </li>
+                </ul>
+                <button class="btn download-cv-btn" id="bottom-cv-download"><a href="#"><i class="fa-solid fa-download"></i> Download CV</a></button>
+            </section>
+
+            
         </section>
 
     </main>
