All done, except fixing buttons

--- a/index.html
+++ b/index.html
@@ -171,6 +171,31 @@
             
         </section>
 
+        <section id="connect">
+            <section id="connect-internal">
+                <ul>
+                <li>
+                    <h1>Lets Connect</h1>
+                    <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+                    <div class="socials">
+                        <a href="#"><img src="images/icons/facebook.png" alt="facebook"></a>
+                        <a href="#"><img src="images/icons/twitter.png" alt="twitter"></a>
+                        <a href="#"><img src="images/icons/insta.png" alt="instagram"></a>
+                    </div>
+                </li>
+
+                <li>
+                    <h1>Let's Message me</h1>
+                    <form>
+                        <input type="text" placeholder="Your Name">
+                        <input type="email" placeholder="Your Email">
+                        <textarea name="Message" rows="6" id="message" placeholder="Message"></textarea>
+                    </form>
+                    <button type="submit" id="form-submit-btn" class="btn">Submit</button>
+                </li>
+            </ul>
+            </section>
+        </section>
     </main>
 
     <footer></footer>
