Fixed Buttons and added Copyright

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         <li><a href="#">Portfolio</a></li>
                         <li><a href="#">Blog</a></li>
                     </ul>
-                    <button class="btn" id="top-nav-bar-btn"><a href="#">Hire Me</a></button>
+                    <a href="#" class="btn" id="top-nav-bar-btn">Hire Me</a>
                 </div>
             </nav>
             <section id="hero-bg">
@@ -36,8 +36,8 @@
                         <h1>Mary Hardy</h1>
                         <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
                         <div class="two-btns">
-                            <button class="btn download-cv-btn"><a href="#"><i class="fa-solid fa-download"></i> Download CV</a></button>
-                            <button class="btn" id="contact-btn"><a href="#"><i class="fa-solid fa-phone"></i> Contact</a></button>
+                            <a href="#" class="btn download-cv-btn"><i class="fa-solid fa-download"></i> Download CV</a>
+                           <a href="#" class="btn" id="contact-btn"><i class="fa-solid fa-phone"></i> Contact</a>
                         </div>
                     </div>
                     <div id="hero-img">
@@ -165,7 +165,7 @@
                         </article>
                     </li>
                 </ul>
-                <button class="btn download-cv-btn" id="bottom-cv-download"><a href="#"><i class="fa-solid fa-download"></i> Download CV</a></button>
+                <a href="#" class="btn download-cv-btn" id="bottom-cv-download"><i class="fa-solid fa-download"></i> Download CV</a>
             </section>
 
             
@@ -198,6 +198,8 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>&copy; 2026 Developed By Jason Dhaki | All rights reserved.</p>
+    </footer>
 </body>
 </html>
