--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <title>Portfolio Website</title>
 
     <!--Style Sheets-->
     <link rel="stylesheet" href="styles/style.css">
